<resources>
    <string name="app_name">Project</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_registration">Register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome "</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="user_name">Name</string>
    <string name="user_email">Email</string>
    <string name="user_password">Password</string>
    <string name="user_student">Student</string>
    <string name="user_instructor">Instructor</string>
    <string name="user_register">Submit</string>
    <string name="admin_create_course">Create Course</string>
    <string name="admin_edit_course">Edit Course</string>
    <string name="admin_delete_course">Delete Course</string>
    <string name="admin_manage_user_account">Manage User Account</string>
    <string name="admin_create_course_course_create">Create</string>
    <string name="admin_delete_course_course_delete">Delete</string>
    <string name="admin_edit_course_course_update">Update</string>
    <string name="user_role"></string>
</resources>